[package]
name = "mkml"
version = "0.1.2"
edition = "2021"
description = "Generates a simple HTML project structure"
authors = ["Rohan"]
repository = "https://github.com/rohankid1/mkml/"
homepage = "https://github.com/rohankid1/mkml/"

[dependencies]
clap = {version = "3.2.17", features = ["derive"]}
log = "0.4.17"
owo-colors = "3.5.0"
pretty_env_logger = "0.4.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1